--- a/src/components/SignUpFormInput/styles.module.css
+++ b/src/components/SignUpFormInput/styles.module.css
@@ -4,27 +4,33 @@
   position: relative;
 }
 
-.inputContent {
+.inputContainer :global(.inputContent) {
   width: 100%;
   height: 100%;
   border: none;
   outline: none;
-  padding: 10px;
+  padding: 10px 16px;
   border: 1px solid #e3e5e5;
   border-radius: 8px;
+  padding-top: 20px;
 }
-
-.inputLabel {
+.inputContainer :global(.inputContent.content-error) {
+  border-color: red !important;
+}
+.inputContainer :global(.inputLabel) {
   pointer-events: none;
   position: absolute;
   left: 0;
-  padding: 10px;
-  transition: 0.4s;
+  top: 12px;
+  padding-left: 16px;
+  transition: 0.2s;
+}
+.inputContainer :global(.inputLabel.label-error) {
+  color: red !important;
 }
 
-.inputContainer input:valid ~ span,
-.inputContainer input:focus ~ span {
-  color: blue;
-  transform: translateY(-10px);
+.inputContainer :global(input:valid ~ span),
+.inputContainer :global(input:focus ~ span) {
+  transform: translateY(-8px);
   font-size: 12px;
 }
