--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -33,6 +33,6 @@ body {
 @layer base {
   html,
   body {
-    font-family: var(--font-inter), sans-serif;
+    font-family: var(--font-noto-san-jp), sans-serif;
   }
 }
