--- a/src/components/common/BasicSelect/index.module.scss
+++ b/src/components/common/BasicSelect/index.module.scss
@@ -49,6 +49,9 @@
     .ant-select:not(.ant-select-customize-input) .ant-select-selector {
       border-width: 2px;
     }
+    // .ant-select-status-error:not(.ant-select-disabled):not(.ant-select-customize-input):not(.ant-pagination-size-changer) .ant-select-selector{
+
+    // }
     .ant-select-focused:where(.css-dev-only-do-not-override-qgg3xn).ant-select:not(.ant-select-disabled):not(
         .ant-select-customize-input
       ):not(.ant-pagination-size-changer)
