--- a/src/components/common/BasicTextArea/index.module.scss
+++ b/src/components/common/BasicTextArea/index.module.scss
@@ -1,16 +1,15 @@
-.customInput {
+.customeTextArea {
   width: 100%;
   :global {
     .ant-input {
-      height: 48px;
+      // height: 60px;
       border-width: 2px;
       border-style: solid;
       border-color: #cbd2e0;
       border-radius: 6px;
-      padding: 12px 16px;
+      padding: 12px;
       font-weight: 400;
       font-size: 16px;
-      line-height: 0;
     }
     .ant-input:hover,
     .ant-input:focus {
@@ -21,7 +20,7 @@
       border-width: 2px;
     }
     .ant-input-status-error:not(.ant-input-disabled):not(.ant-input-borderless).ant-input:hover {
-      border-width: 1px;
+      border-width: 2px;
       border-color: #ff4d4f;
     }
   }
