--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -38,5 +38,19 @@ body {
 }
 
 .stop-scrolling {
-  overflow: hidden;
+  overflow: hidden !important;
+}
+
+.custom-scroll::-webkit-scrollbar {
+  width: 5px;
+}
+.custom-scroll::-webkit-scrollbar-track {
+  background: #fff;
+}
+.custom-scroll::-webkit-scrollbar-thumb {
+  background: #c6c6c6;
+  border-radius: 5px;
+}
+.custom-scroll::-webkit-scrollbar-thumb:hover {
+  background: #a9a9a9;
 }
