--- a/src/components/common/BasicInput/index.module.scss
+++ b/src/components/common/BasicInput/index.module.scss
@@ -1,7 +1,9 @@
 .customInput {
   width: 100%;
   :global {
-    .ant-input {
+    .ant-input,
+    .ant-input-number {
+      width: 100%;
       height: 48px;
       border-width: 2px;
       border-style: solid;
@@ -13,7 +15,10 @@
       line-height: 0;
     }
     .ant-input:hover,
-    .ant-input:focus {
+    .ant-input-number:hover,
+    .ant-input-number:focus,
+    .ant-input:focus,
+    .ant-input-number:focus-within {
       border-width: 2px;
       border-color: var(--primary);
     }
@@ -23,6 +28,17 @@
     .ant-input-status-error:not(.ant-input-disabled):not(.ant-input-borderless).ant-input:hover {
       border-width: 1px;
       border-color: #ff4d4f;
+    }
+
+    .ant-input-number-input-wrap {
+      width: 100%;
+    }
+    .ant-input-number-handler-wrap {
+      display: none;
+    }
+    .ant-input-number .ant-input-number-input {
+      padding: 0;
+      line-height: normal;
     }
   }
 }
