--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,6 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 /* :root {
   --foreground-rgb: 0, 0, 0;
@@ -15,7 +16,10 @@
     --background-end-rgb: 0, 0, 0;
   }
 } */
-
+:root {
+  font-family: 'Noto Sans JP', sans-serif;
+  --font-noto-san-jp: 'Noto Sans JP', sans-serif;
+}
 input[type='number'] {
   -moz-appearance: textfield;
 }
