--- a/src/components/common/CModalWapper/styles.module.scss
+++ b/src/components/common/CModalWapper/styles.module.scss
@@ -1,4 +1,4 @@
-.campaignRewardModal {
+.cModalWapper {
   :global {
     .ant-modal-root .ant-modal-mask {
       background-color: rgba(51, 51, 51, 0.9) !important;
