--- a/src/components/CampaignCreate/CampaignCreation/Setup/ExplanatoryText/index.module.scss
+++ b/src/components/CampaignCreate/CampaignCreation/Setup/ExplanatoryText/index.module.scss
@@ -1,12 +1,15 @@
 .customeTextEditor {
   :global {
     .ql-toolbar.ql-snow {
-      padding: 0;
+      padding: 0px 24px;
       height: 56px;
       display: flex;
       align-items: center;
       border: 2px solid #cbd2e0;
       border-radius: 6px 6px 0 0;
+    }
+    .ql-header.ql-picker {
+      width: 120px;
     }
     .ql-container.ql-snow {
       height: 380px;
@@ -14,8 +17,23 @@
       border-radius: 0 0 6px 6px;
       border-top: none;
     }
+    .ql-snow .ql-stroke {
+      fill: inherit;
+      stroke-width: 1;
+      stroke: none;
+    }
+    .ql-active {
+      path {
+        fill: #04afaf;
+        stroke: 2;
+      }
+    }
 
     // .quill {
     // }
+  }
+  .ql-snow .ql-picker.ql-expanded .ql-picker-label .ql-stroke {
+    stroke: #000 !important;
+    stroke-width: 1;
   }
 }
