--- a/src/components/common/UploadButton/index.module.scss
+++ b/src/components/common/UploadButton/index.module.scss
@@ -13,5 +13,22 @@
       width: 300px !important;
       height: 300px !important;
     }
+    .ant-upload-wrapper .ant-upload-list.ant-upload-list-picture-card .ant-upload-list-item {
+      padding: 0;
+      border-radius: 0;
+      border: 2px solid #2d3648;
+    }
+    .ant-upload-wrapper.ant-upload-picture-card-wrapper
+      .ant-upload-list.ant-upload-list-picture-card
+      .ant-upload-list-item::before {
+      width: 100%;
+      height: 100%;
+    }
+    .ant-upload-wrapper.ant-upload-picture-card-wrapper
+      .ant-upload-list.ant-upload-list-picture-card
+      .ant-upload-list-item-container {
+      min-width: 467px;
+      min-height: 216px;
+    }
   }
 }
