--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,19 +3,6 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
-/* :root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-} */
 :root {
   font-family: 'Noto Sans JP', sans-serif;
   --font-noto-san-jp: 'Noto Sans JP', sans-serif;
@@ -36,7 +23,9 @@ body {
 
 @layer base {
   html,
-  body {
+  body,
+  div,
+  span {
     font-family: var(--font-noto-san-jp), sans-serif;
   }
 }
