--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,9 +3,12 @@
 @tailwind utilities;
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;300;400;500;600;700;800;900&display=swap');
+
 :root {
   font-family: 'Noto Sans JP', sans-serif;
   --font-noto-san-jp: 'Noto Sans JP', sans-serif;
+  --font-montserrat: 'Montserrat', sans-serif;
 }
 input[type='number'] {
   -moz-appearance: textfield;
