--- a/src/components/common/BasicSelect/index.module.scss
+++ b/src/components/common/BasicSelect/index.module.scss
@@ -1,4 +1,5 @@
 .defaultSelect {
+  width: 100%;
   :global {
     .ant-select-single {
       height: 48px;
@@ -6,13 +7,14 @@
     }
     .ant-select-single .ant-select-selector {
       border-radius: 4px;
-      border-color: #cbd2e0;
+      border-color: #333;
     }
     .ant-select:not(.ant-select-disabled):not(.ant-select-customize-input):not(.ant-pagination-size-changer):hover
       .ant-select-selector {
-      border-color: #2d3648;
-      padding: 0px 12px;
+      border-color: #333 !important;
+      padding: 0px 24px;
       border-width: 2px;
+      box-shadow: none;
     }
     .ant-select-status-error:not(.ant-select-disabled):not(.ant-select-customize-input):not(
         .ant-pagination-size-changer
@@ -24,30 +26,33 @@
     //   border: 0px !important;
     // }
     .ant-select-selector:hover {
-      border-color: var(--primary);
+      border-color: #333;
       border-width: 2px !important;
     }
     // .ant-select-arrow {
     //   padding-right: 0;
     // }
     .ant-select-selection-item {
-      font-size: 16px;
-      color: var(--primary-text);
+      font-size: 14px;
+      color: #333;
       font-weight: 400;
     }
     .ant-select:not(.ant-select-customize-input) .ant-select-selector {
-      padding: 0 12px;
+      padding: 0 24px;
     }
     input {
       font-size: 16px;
     }
     .ant-select-selection-placeholder {
-      font-size: 16px !important;
+      font-size: 14px !important;
       font-weight: 400;
-      color: #2d3648;
+      color: #aaaaaa;
     }
     .ant-select:not(.ant-select-customize-input) .ant-select-selector {
       border-width: 2px;
+    }
+    .ant-select .ant-select-arrow {
+      inset-inline-end: 24px;
     }
     // .ant-select-status-error:not(.ant-select-disabled):not(.ant-select-customize-input):not(.ant-pagination-size-changer) .ant-select-selector{
 
