--- a/src/context/PopUpContext/modal.module.scss
+++ b/src/context/PopUpContext/modal.module.scss
@@ -3,10 +3,18 @@
     .ant-modal .ant-modal-content {
       padding: 0 !important;
       box-shadow: none !important;
-      border-radius: 0 !important;
+      border-radius: inherit !important;
     }
     .ant-modal .ant-modal-footer {
       margin: 0;
+    }
+  }
+}
+.customMask {
+  :global {
+    .ant-modal-root .ant-modal-mask {
+      background-color: #333;
+      opacity: 0.9;
     }
   }
 }
