--- a/src/components/common/BasicDatePicker/index.module.scss
+++ b/src/components/common/BasicDatePicker/index.module.scss
@@ -6,12 +6,12 @@
     }
 
     .ant-picker {
-      height: 48px;
+      height: 53px;
       border-width: 2px;
       border-style: solid;
-      border-color: #cbd2e0;
+      border-color: #333;
       border-radius: 6px;
-      padding: 12px 24px 12px 12px;
+      padding: 16px 24px;
       font-weight: 500;
       font-size: 16px;
       width: 100%;
