--- a/src/components/CampaignCreate/CampaignCreation/Setup/ExplanatoryText/index.module.scss
+++ b/src/components/CampaignCreate/CampaignCreation/Setup/ExplanatoryText/index.module.scss
@@ -5,15 +5,18 @@
       height: 56px;
       display: flex;
       align-items: center;
-      border: 2px solid #cbd2e0;
+      border: 2px solid #333;
       border-radius: 6px 6px 0 0;
     }
     .ql-header.ql-picker {
       width: 120px;
     }
+    .ql-editor {
+      padding: 32px;
+    }
     .ql-container.ql-snow {
-      height: 380px;
-      border: 2px solid #cbd2e0;
+      height: 686px;
+      border: 2px solid #333;
       border-radius: 0 0 6px 6px;
       border-top: none;
     }
