--- a/src/components/common/BasicTextArea/index.module.scss
+++ b/src/components/common/BasicTextArea/index.module.scss
@@ -5,16 +5,16 @@
       // height: 60px;
       border-width: 2px;
       border-style: solid;
-      border-color: #cbd2e0;
+      border-color: #333;
       border-radius: 6px;
-      padding: 12px;
+      padding: 16px 24px;
       font-weight: 400;
       font-size: 16px;
     }
     .ant-input:hover,
     .ant-input:focus {
       border-width: 2px;
-      border-color: var(--primary);
+      border-color: #333;
     }
     .ant-input-status-error:not(.ant-input-disabled):not(.ant-input-borderless).ant-input {
       border-width: 2px;
