--- a/src/components/common/CCardShadow/styles.module.scss
+++ b/src/components/common/CCardShadow/styles.module.scss
@@ -1,7 +1,8 @@
 .shadowCardContainer {
+  @apply h-full;
   :global {
     .shadowCardInner {
-      @apply pl-[6px] pt-[6px];
+      @apply pl-[6px] pt-[6px] h-full;
     }
     .card-inner {
       @apply relative w-full h-full;
@@ -10,7 +11,7 @@
       @apply absolute w-full h-full top-[0px] left-[0px] bg-[#333] rounded-[16px];
     }
     .card-content {
-      @apply border-[2px] border-[#333] rounded-[16px] bg-white translate-x-[-6px] translate-y-[-6px] transition-all duration-200 overflow-hidden;
+      @apply border-[2px] border-[#333] rounded-[16px] bg-white translate-x-[-6px] translate-y-[-6px] transition-all duration-200 overflow-hidden h-full;
     }
     @media (hover: hover) {
       .shadowCardInner:hover .card-content {
