--- a/src/components/common/BasicButton/index.module.scss
+++ b/src/components/common/BasicButton/index.module.scss
@@ -1,3 +1,21 @@
+.btnDisabled {
+  button:hover {
+    border-color: rgba(45, 54, 72, 0.2) !important;
+    color: #ccc !important;
+  }
+  button {
+    background-color: white !important;
+    border-radius: 6px !important;
+    height: 100% !important;
+    width: 100% !important;
+    color: #ccc !important;
+    font-size: 16px;
+    font-weight: 700;
+    // border: 2px solid rgba(45, 54, 72, 0.2) !important;
+    opacity: 0.8;
+    cursor: not-allowed;
+  }
+}
 .btnDefault {
   button:hover {
     border-color: rgba(45, 54, 72, 0.2) !important;
