--- a/src/components/common/CCardShadow/styles.module.scss
+++ b/src/components/common/CCardShadow/styles.module.scss
@@ -14,7 +14,7 @@
       @apply border-[2px] border-[#333] rounded-[16px] bg-white translate-x-[-6px] translate-y-[-6px] transition-all duration-200 overflow-hidden h-full;
     }
     @media (hover: hover) {
-      .shadowCardInner:hover .card-content {
+      .shadowCardInner.contentHover:hover .card-content {
         @apply cursor-pointer translate-x-0 -translate-y-0;
       }
     }
