--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -23,6 +23,7 @@ input[type='number']::-webkit-inner-spin-button {
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
+  color: #333;
 }
 
 @layer base {
