--- a/src/components/CampaignCreate/CampaignCreation/Setup/ExplanatoryText/index.module.scss
+++ b/src/components/CampaignCreate/CampaignCreation/Setup/ExplanatoryText/index.module.scss
@@ -31,6 +31,21 @@
         stroke: 2;
       }
     }
+    .ql-snow .ql-tooltip[data-mode='link']::before {
+      content: 'リンクを入する';
+    }
+    .ql-snow .ql-tooltip.ql-editing a.ql-action::after {
+      content: '保存';
+    }
+    .ql-snow .ql-tooltip::before {
+      content: 'URLにアクセスする';
+    }
+    .ql-snow .ql-tooltip a.ql-action::after {
+      content: '編集';
+    }
+    .ql-snow .ql-tooltip a.ql-remove::before {
+      content: '削除';
+    }
 
     // .quill {
     // }
