--- a/src/components/CampaignCreate/CampaignCreation/Setup/ExplanatoryText/index.module.scss
+++ b/src/components/CampaignCreate/CampaignCreation/Setup/ExplanatoryText/index.module.scss
@@ -23,7 +23,7 @@
     .ql-snow .ql-stroke {
       fill: inherit;
       stroke-width: 1;
-      stroke: none;
+      // stroke: none;
     }
     .ql-active {
       path {
