--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,3 +1,10 @@
+$width-mobile: 800px;
+
+@mixin mobile {
+  @media (max-width: #{$width-mobile}) {
+    @content;
+  }
+}
 .clout-custom-antd-radio .ant-radio-wrapper {
   .ant-radio {
     .ant-radio-inner {
