--- a/src/components/CampaignCreate/CampaignCreation/Setup/ExplanatoryText/index.module.scss
+++ b/src/components/CampaignCreate/CampaignCreation/Setup/ExplanatoryText/index.module.scss
@@ -1,3 +1,4 @@
+@import '../../../../../styles/globals.scss';
 .customeTextEditor {
   :global {
     .ql-toolbar.ql-snow {
@@ -7,6 +8,10 @@
       align-items: center;
       border: 2px solid #333;
       border-radius: 6px 6px 0 0;
+      @include mobile {
+        height: fit-content;
+        padding: 10px;
+      }
     }
     .ql-header.ql-picker {
       width: 120px;
@@ -25,6 +30,7 @@
       stroke-width: 1;
       // stroke: none;
     }
+
     .ql-active {
       path {
         fill: #04afaf;
