--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -119,7 +119,7 @@ div.custom-antd-notification {
 .custom-antd-notification--error {
   // background-color: #ff0000;
   .ant-notification-notice-message {
-    // color: white !important;
+    color: #ff0000 !important;
   }
 }
 
