--- a/src/components/common/BasicDatePicker/index.module.scss
+++ b/src/components/common/BasicDatePicker/index.module.scss
@@ -37,8 +37,8 @@
 }
 .customPopup {
   :global {
-    .ant-picker-footer {
-      display: none;
+    .ant-btn-primary {
+      background-color: #333;
     }
   }
 }
